--- a/youtube.html
+++ b/youtube.html
@@ -34,10 +34,14 @@
         margin-bottom: 12px;
       }
 
+      .video-info {
+        margin-left: 12px;
+      }
+
     
       .video-info-grid {
         display: grid;
-        grid-template-columns: 50px 1fr 
+        grid-template-columns: 50px 1fr ;
         
       }
   
