ready to impement  flexbox

--- a/youtube.html
+++ b/youtube.html
@@ -77,9 +77,16 @@
     </style>
   </head >
 
-  <body>
-
-    <input class="search-bar" type="text" placeholder="Search">
+  <body style="padding-bottom: 1000px;">
+    <div class="header">
+      <div class="left-section"></div>
+      <div class="middle-section">
+        <input class="search-bar" type="text" placeholder="Search">
+      </div>
+      <div class="right-section"></div> 
+      
+    </div>
+    
 
     <div class="video-grid">
 
