--- a/youtube.html
+++ b/youtube.html
@@ -14,11 +14,18 @@
 </head>
 <body style="padding-bottom: 1000px;">
     <div class="header">
-      <div class="left-section">left section</div>
-      <div class="middle-section">
+      <div class="left-section">
+        <img src="icons/hamburger-menu.svg">
+        <img src="icons/youtube-logo.svg">
+    </div>
+
+    <div class="middle-section">
         <input class="search-bar" type="text" placeholder="Search">
-      </div>
-      <div class="right-section">right section</div> 
+   </div>
+
+    <div class="right-section">right section
+
+    </div> 
       
     </div>
     
