--- a/youtube.html
+++ b/youtube.html
@@ -15,13 +15,22 @@
 <body style="padding-bottom: 1000px;">
     <div class="header">
       <div class="left-section">
-        <img src="icons/hamburger-menu.svg">
-        <img src="icons/youtube-logo.svg">
+        <img class="hamburger-menu" src="icons/hamburger-menu.svg">
+        <img class="youtube-logo" src="icons/youtube-logo.svg">
     </div>
 
     <div class="middle-section">
         <input class="search-bar" type="text" placeholder="Search">
+
+        <button class="search-button"> 
+          <img class="search-icon" src="icons/search.svg">
+        </button>
+        <button class="voice-search-button">
+          <img src="icons/voice-search-icon.svg">
+        </button>
+
    </div>
+
 
     <div class="right-section">right section
 
