--- a/youtube.html
+++ b/youtube.html
@@ -25,15 +25,19 @@
         <button class="search-button"> 
           <img class="search-icon" src="icons/search.svg">
         </button>
-        <button class="voice-search-button">
-          <img src="icons/voice-search-icon.svg">
-        </button>
+        <button 
+        class="voice-search-button">
 
+          <img class="voice-search-icon" src="icons/voice-search-icon.svg">
+        </button>
    </div>
 
 
-    <div class="right-section">right section
-
+    <div class="right-section">
+      <img class="upload-icon" src="icons/upload.svg">
+      <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+      <img class="notifications-icon" src="icons/notifications.svg">
+      <img class="current-user-picture" src="channel-pictures/channel-7.jpeg">
     </div> 
       
     </div>
