Refactor sidebar section in youtube.html

--- a/youtube.html
+++ b/youtube.html
@@ -44,6 +44,8 @@
       </div>
     </div>
 
+    <div class="sidebar">sidebar</div>
+
     <div class="video-grid">
       <div class="video-preview">
         <div class="thumbnail-row">
