--- a/youtube.html
+++ b/youtube.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/general.css" />
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/video.css" />
+    <link rel="stylesheet" href="styles/sidebar.css" />
   </head>
 
   <body style="padding-bottom: 1000px">
