--- a/youtube.html
+++ b/youtube.html
@@ -78,6 +78,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-2.webp" />
+          <div class="video-time">8:22</div>
         </div>
 
         <div class="video-info-grid">
@@ -102,6 +103,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-3.webp" />
+          <div class="video-time">9:13</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -126,6 +128,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-4.webp" />
+          <div class="video-time">22:09</div>
         </div>
 
         <div class="video-info-grid">
@@ -152,6 +155,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-5.webp" />
+          <div class="video-time">11:17</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -176,6 +180,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnails/thumbnail-6.webp" />
+          <div class="video-time">19:59</div>
         </div>
 
         <div class="video-info-grid">
