--- a/youtube.html
+++ b/youtube.html
@@ -49,7 +49,15 @@
       </div>
     </div>
 
-    <div class="sidebar">sidebar</div>
+    <div class="sidebar">
+      sidebar
+      <div class="sidebar-link"></div>
+      <div class="sidebar-link"></div>
+      <div class="sidebar-link"></div>
+      <div class="sidebar-link"></div>
+      <div class="sidebar-link"></div>
+      <div class="sidebar-link"></div>
+    </div>
 
     <div class="video-grid">
       <div class="video-preview">
