--- a/youtube.html
+++ b/youtube.html
@@ -52,28 +52,28 @@
     <div class="sidebar">
       sidebar
       <div class="sidebar-link">
-        <img class="sidebar-icon" src="icons/home.svg" />
+        <img src="icons/home.svg" />
         <p class="sidebar-text">Home</p>
       </div>
 
       <div class="sidebar-link">
-        <img class="sidebar-icon" src="icons/explore.svg" />
+        <img src="icons/explore.svg" />
         <p class="sidebar-text">Trending</p>
       </div>
       <div class="sidebar-link">
-        <img class="sidebar-icon" src="icons/subscriptions.svg" />
+        <img src="icons/subscriptions.svg" />
         <p class="sidebar-text">Subscriptions</p>
       </div>
       <div class="sidebar-link">
-        <img class="sidebar-icon" src="icons/originals.svg" />
+        <img src="icons/originals.svg" />
         <p class="sidebar-text">Library</p>
       </div>
       <div class="sidebar-link">
-        <img class="sidebar-icon" src="icons/youtube-music.svg" />
+        <img src="icons/youtube-music.svg" />
         <p class="sidebar-text">History</p>
       </div>
       <div class="sidebar-link">
-        <img class="sidebar-icon" src="icons/library.svg" />
+        <img src="icons/library.svg" />
         <p class="sidebar-text">Your videos</p>
       </div>
     </div>
