Refactor sidebar.css to update styling for sidebar links and add new SVG icons

--- a/youtube.html
+++ b/youtube.html
@@ -53,22 +53,28 @@
       sidebar
       <div class="sidebar-link">
         <img src="icons/home.svg" />
+        <div>Home</div>
       </div>
 
       <div class="sidebar-link">
         <img src="icons/explore.svg" />
+        <div>Home</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/subscriptions.svg" />
+        <div>Home</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/originals.svg" />
+        <div>Home</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/youtube-music.svg" />
+        <div>Home</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/library.svg" />
+        <div>Home</div>
       </div>
     </div>
 
