Refactor sidebar.css to update sidebar link labels

--- a/youtube.html
+++ b/youtube.html
@@ -58,23 +58,23 @@
 
       <div class="sidebar-link">
         <img src="icons/explore.svg" />
-        <div>Home</div>
+        <div>Explore</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/subscriptions.svg" />
-        <div>Home</div>
+        <div>Subsription</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/originals.svg" />
-        <div>Home</div>
+        <div>Originals</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/youtube-music.svg" />
-        <div>Home</div>
+        <div>YouTube Music</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/library.svg" />
-        <div>Home</div>
+        <div>Library</div>
       </div>
     </div>
 
