Refactor sidebar.css to update sidebar link labels and styling

--- a/youtube.html
+++ b/youtube.html
@@ -62,7 +62,7 @@
       </div>
       <div class="sidebar-link">
         <img src="icons/subscriptions.svg" />
-        <div>Subsription</div>
+        <div>Subsriptions</div>
       </div>
       <div class="sidebar-link">
         <img src="icons/originals.svg" />
