--- a/youtube.html
+++ b/youtube.html
@@ -32,6 +32,7 @@
         </button>
         <button class="voice-search-button">
           <img class="voice-search-icon" src="icons/voice-search-icon.svg" />
+          <div class="tooltip">Search with your voice</div>
         </button>
       </div>
 
