--- a/youtube.html
+++ b/youtube.html
@@ -37,7 +37,11 @@
       </div>
 
       <div class="right-section">
-        <img class="upload-icon" src="icons/upload.svg" />
+        <div class="upload-icon-container">
+          <img class="upload-icon" src="icons/upload.svg" />
+          <div class="tooltip">Create</div>
+        </div>
+
         <img class="youtube-apps-icon" src="icons/youtube-apps.svg" />
         <div class="notifications-icon-container">
           <img class="notifications-icon" src="icons/notifications.svg" />
