--- a/youtube.html
+++ b/youtube.html
@@ -42,7 +42,11 @@
           <div class="tooltip">Create</div>
         </div>
 
-        <img class="youtube-apps-icon" src="icons/youtube-apps.svg" />
+        <div class="youtube-apps-icon-container">
+          <img class="youtube-apps-icon" src="icons/youtube-apps.svg" />
+          <div class="tooltip">YouTube apps</div>
+        </div>
+
         <div class="notifications-icon-container">
           <img class="notifications-icon" src="icons/notifications.svg" />
           <div class="notifications-count">3</div>
