--- a/youtube.html
+++ b/youtube.html
@@ -49,6 +49,7 @@
 
         <div class="notifications-icon-container">
           <img class="notifications-icon" src="icons/notifications.svg" />
+          <div class="tooltip">Notifications</div>
           <div class="notifications-count">3</div>
         </div>
 
